--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&display=swap");
 body {
   font-family: "IBM Plex Sans", "IBM Plex Sans Arabic";
+  background-color: #132a13;
 }
 
 * {
@@ -14,7 +15,7 @@ body {
   left: 50%;
   top: -100%;
   transform: translateX(-50%);
-  background-color: #111;
+  background-color: #132a13;
   width: 50%;
   box-shadow: 0 10px 5px rgba(0, 0, 0, 0.5);
   z-index: 1000;
@@ -46,6 +47,7 @@ body {
   font-family: inherit;
   font-size: 1.3rem;
   border-radius: 5px;
+  background-color: rgba(236, 243, 158, 0.6470588235);
 }
 .modal .buttons {
   display: flex;
@@ -69,27 +71,22 @@ body {
   color: #fff;
 }
 .modal.popUp {
-  top: 5px;
+  top: 20px;
 }
 
 .app {
-  display: flex;
-  flex-direction: row;
-  justify-content: none;
-  align-items: flex-start;
-  gap: 10px;
-  width: 80%;
-  margin: 10px auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 100%;
   padding: 10px;
-  border-radius: 10px;
-  background-color: #2b1887;
-  min-height: calc(100vh - 20px);
   overflow: auto;
+  gap: 10px;
+  min-height: calc(100vh - 85px);
 }
 .app > div {
-  width: 50%;
+  width: 100%;
   min-height: inherit;
-  background-color: #d5ccff;
+  background-color: #90a955;
   padding: 10px;
   border-radius: 5px;
   display: flex;
@@ -112,9 +109,9 @@ body {
   align-items: center;
   gap: 10px;
   text-transform: capitalize;
-  color: #2b1887;
+  color: #132a13;
   font-weight: 400;
-  font-size: 2rem;
+  font-size: 1.5rem;
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
@@ -122,7 +119,7 @@ body {
 .app > div .header button {
   outline: none;
   border: none;
-  font-size: 2rem;
+  font-size: 1.5rem;
   cursor: pointer;
   width: 30px;
   height: 30px;
@@ -132,7 +129,7 @@ body {
   align-items: center;
   gap: 0;
   background-color: transparent;
-  color: #2b1887;
+  color: #132a13;
 }
 .app > div > .tasks {
   display: flex;
@@ -162,7 +159,7 @@ body {
   gap: 0px;
 }
 .app > div > .tasks .card.drag {
-  box-shadow: 0 10px 5px rgba(43, 24, 135, 0.2509803922);
+  box-shadow: 0 10px 5px rgba(0, 0, 0, 0.3);
 }
 .app > div > .tasks .card h2 {
   color: #222;
@@ -207,14 +204,14 @@ body {
   background-color: #d9d9d9;
 }
 .app > div > .tasks .card .info .prio > h3 {
-  background-color: #2b1887;
+  background-color: #132a13;
   color: #fff;
   padding: 5px 10px;
   border-radius: 5px;
   text-transform: uppercase;
 }
 .app > div > .tasks .card .info > h3 {
-  color: #2b1887;
+  color: #132a13;
   text-transform: capitalize;
   font-weight: 400;
 }/*# sourceMappingURL=main.css.map */
